Da uma olhada na lógica aqui Suissa.

--- a/views/beers/form_delete.jade
+++ b/views/beers/form_delete.jade
@@ -24,4 +24,4 @@ block content
 				| #{cerveja.description}
 
 		input(type='submit', value='Enviar')
-		input(type='hidden', name='_method', value='DELETE')
+		input(type='hidden', name='_method', value='#{action}')
