--- a/views/beers/form.jade
+++ b/views/beers/form.jade
@@ -4,21 +4,28 @@ block content
 
 	h1 Minhas cervejas
 
-	form(action='/beers', method='post')
+	if action = 'POST'
+		- var url = '/beers'
+	else
+		- var url = '/beers/'+cerveja._id
+
+	form(action=url, method='POST')
 		label 
 			span Nome:
-			input(type='text', name='name')
+			input(type='text', name='name', value='#{cerveja.name}')
 
 		label 
 			span Teor Alcólico
-			input(type='text', name='alcohol')
+			input(type='text', name='alcohol', value='#{cerveja.alcohol}')
 
 		label 
 			span Categoria
-			input(type='text', name='category')
+			input(type='text', name='category', value='#{cerveja.category}')
 
 		Label 
 			span Descrição
 			textarea(name='description')
+				| #{cerveja.description}
 
 		input(type='submit', value='Enviar')
+		input(type='hidden', name='_method', value='#{action}')
